// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> displays header 1`] = `
<div
  data-testid="header"
>
  <h1
    data-testid="headerTitle"
  >
    kayak
  </h1>
  <h2
    data-testid="headerSubtitle"
  >
    CEO of supermarket cookie quality debates
  </h2>
</div>
`;

exports[`<Header /> renders OK 1`] = `
<div
  data-testid="header"
>
  <h1
    data-testid="headerTitle"
  >
    John Doe
  </h1>
  <h2
    data-testid="headerSubtitle"
  >
    Programmer
  </h2>
</div>
`;
